--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-mysql-connector-python
-tk
+tkinter  # Standard library, no need to include unless you use a custom Python distribution
+matplotlib==<latest_version>
+mysql-connector-python==<latest_version>
+Pillow==<latest_version>
